--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.11.15",
     "mongoose-autopopulate": "^0.12.3",
     "node-cron": "^2.0.3",
+    "node-mailjet": "^3.3.1",
     "nodemon": "^2.0.7",
     "socket.io": "^3.1.1",
     "underscore": "^1.12.0"
