--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-mailjet": "^3.3.1",
     "nodemon": "^2.0.7",
     "socket.io": "^3.1.1",
-    "underscore": "^1.12.0"
+    "underscore": "^1.12.0",
+    "dots-node": "^1.4.0"
   }
 }
